--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
-    text-align: center;
-    background: radial-gradient(circle, white 1%, black 20%) ; /* #282c34; */
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    opacity: 0.9;
+  text-align: center;
+  background: rgba(9, 87, 2, 0.836);
+  min-height: 100vmin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.9;
 }
