--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,26 +1,82 @@
 .snake-cell {
-  /* background-color: rgb(66, 190, 9); */
-  /* background-color: rgb(81, 255, 0); */
-  border-radius: 30%;
-  /* background: rgba(89, 0, 255, 0.8); */
-  background: rgb(0, 0, 0);
-  border-radius: 30%;
-  box-shadow: inset 0 0 2vmin rgb(0, 255, 98), 0 0 1vmin rgb(0, 255, 42);
-  opacity: 0.9;
+  background: rgb(40, 95, 245);
+  box-shadow: inset 0 0 0.4vmin rgb(0, 0, 0);
 }
 
 .snake-head {
-  /* background: rgba(255, 0, 0, 0.8); */
-  background: rgb(0, 0, 0);
-  border-radius: 20%;
-  z-index: 1;
-  box-shadow: inset 0 0 2vmin rgb(255, 230, 0),
-   0vh 0vh 2vmin rgb(255, 208, 0),
-   0vh 0.3vh 2vmin rgb(255, 208, 0);
+  background: rgb(236, 205, 29);
+  box-shadow: inset 0 0 0.3vmin rgb(0, 0, 0);
 }
 
 .food-cell {
-  background: yellow;
-  box-shadow: inset 0 0 1vmin rgb(241, 1, 1), 0 0 2vmin rgb(255, 238, 0, 0.8);
-  border-radius: 50%;
+  background: linear-gradient(to left, rgb(236, 137, 8), rgb(253, 232, 37));
+  margin-top: 0.8vmin;
+
+  border-radius: 50% 50% 50% 50% / 70% 70% 90% 90%;
+  box-shadow: inset 0 0 0.4vmin black;
+}
+
+.food-cell::before {
+  content: "";
+  position: absolute;
+  background: rgb(4, 204, 54);
+  box-shadow: inset 0 0 0.3vmin black;
+  height: 1.2vmin;
+  width: 1.2vmin;
+  margin: -1.1vmin -0.3vmin;
+  z-index: 1;
+  border-radius: 100% 0% 100% 0% / 100% 0% 100% 0%;
+}
+
+#grid-container {
+  background: rgba(9, 87, 2, 0.836);
+  padding-left: 10vmin;
+  padding-top: 1vmin;
+  padding-right: 10vmin;
+  padding-bottom: 10vmin;
+  margin: 2vmin;
+  border-radius: 10%;
+}
+
+#score {
+  color: white;
+  font-size: 5vmin;
+  margin-bottom: 2vmin;
+}
+
+.dropdown {
+  margin-top: 20vmin;
+  max-height: 5vmin;
+  position: absolute;
+  right: 10vmin;
+}
+
+.dropbtn {
+  background: rgb(168, 209, 18);
+  padding: 2vmin;
+  font-size: 2vmin;
+  border: none;
+  color: white;
+}
+
+.dropdown-content {
+  display: none;
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+  background: white;
+}
+
+.dropdown-content button {
+  font-size: 1.5vmin;
+  padding: 3vmin;
+  background: white;
+  border: none;
+}
+
+.dropdown-content button:hover {
+  background: rgb(223, 223, 223);
+  cursor: pointer;
 }
