most of the project

--- a/src/components/app.module.css
+++ b/src/components/app.module.css
@@ -1,4 +1,8 @@
 .app {
   height: 100%;
   width: 100%;
+  background: linear-gradient(45deg, #e66465, #9198e5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
